core/prometheus/1.1.56/CHANGELOG.md
# Changelog<br>


<a name="prometheus-1.1.56"></a>
### [prometheus-1.1.56](https://github.com/truecharts/apps/compare/uptimerobot-prometheus-2.0.17...prometheus-1.1.56) (2022-02-03)

#### Chore

* update docker general non-major ([#1836](https://github.com/truecharts/apps/issues/1836))



<a name="prometheus-1.1.55"></a>
### [prometheus-1.1.55](https://github.com/truecharts/apps/compare/prometheus-1.1.54...prometheus-1.1.55) (2022-02-02)

#### Chore

* update helm general non-major helm releases ([#1828](https://github.com/truecharts/apps/issues/1828))



<a name="prometheus-1.1.54"></a>
### [prometheus-1.1.54](https://github.com/truecharts/apps/compare/uptimerobot-prometheus-2.0.16...prometheus-1.1.54) (2022-01-31)

#### Chore

* update docker general non-major docker tags ([#1823](https://github.com/truecharts/apps/issues/1823))



<a name="prometheus-1.1.53"></a>
### [prometheus-1.1.53](https://github.com/truecharts/apps/compare/prometheus-1.1.52...prometheus-1.1.53) (2022-01-25)

#### Chore

* update helm general non-major helm releases ([#1791](https://github.com/truecharts/apps/issues/1791))



<a name="prometheus-1.1.52"></a>
### [prometheus-1.1.52](https://github.com/truecharts/apps/compare/prometheus-1.1.51...prometheus-1.1.52) (2022-01-24)

#### Chore

* update docker general non-major docker tags ([#1787](https://github.com/truecharts/apps/issues/1787))



<a name="prometheus-1.1.51"></a>
### [prometheus-1.1.51](https://github.com/truecharts/apps/compare/uptimerobot-prometheus-2.0.15...prometheus-1.1.51) (2022-01-24)

#### Chore

* update docker general non-major ([#1786](https://github.com/truecharts/apps/issues/1786))



<a name="prometheus-1.1.50"></a>
### [prometheus-1.1.50](https://github.com/truecharts/apps/compare/prometheus-1.1.49...prometheus-1.1.50) (2022-01-22)

#### Chore

* update helm general non-major helm releases ([#1766](https://github.com/truecharts/apps/issues/1766))



<a name="prometheus-1.1.49"></a>
### [prometheus-1.1.49](https://github.com/truecharts/apps/compare/prometheus-1.1.48...prometheus-1.1.49) (2022-01-22)

#### Chore

* update docker general non-major ([#1764](https://github.com/truecharts/apps/issues/1764))



<a name="prometheus-1.1.48"></a>
### [prometheus-1.1.48](https://github.com/truecharts/apps/compare/prometheus-1.1.47...prometheus-1.1.48) (2022-01-21)

#### Chore

* update helm general non-major helm releases ([#1759](https://github.com/truecharts/apps/issues/1759))



<a name="prometheus-1.1.47"></a>
### [prometheus-1.1.47](https://github.com/truecharts/apps/compare/prometheus-1.1.46...prometheus-1.1.47) (2022-01-21)

#### Chore

* update docker general non-major ([#1757](https://github.com/truecharts/apps/issues/1757))



<a name="prometheus-1.1.46"></a>
### [prometheus-1.1.46](https://github.com/truecharts/apps/compare/prometheus-1.1.45...prometheus-1.1.46) (2022-01-21)

#### Chore

* update docker general non-major ([#1751](https://github.com/truecharts/apps/issues/1751))
