core/prometheus/1.1.69/CHANGELOG.md
# Changelog<br>


<a name="prometheus-1.1.69"></a>
### [prometheus-1.1.69](https://github.com/truecharts/apps/compare/prometheus-1.1.68...prometheus-1.1.69) (2022-02-26)

#### Fix

* enable hostNetworking and change port ([#1969](https://github.com/truecharts/apps/issues/1969))



<a name="prometheus-1.1.68"></a>
### [prometheus-1.1.68](https://github.com/truecharts/apps/compare/prometheus-1.1.67...prometheus-1.1.68) (2022-02-26)

#### Chore

* rename `web_portal` to `open` ([#1957](https://github.com/truecharts/apps/issues/1957))

#### Fix

* don't export node-exporter on host



<a name="prometheus-1.1.67"></a>
### [prometheus-1.1.67](https://github.com/truecharts/apps/compare/prometheus-1.1.66...prometheus-1.1.67) (2022-02-22)

#### Chore

* update helm general non-major helm releases ([#1932](https://github.com/truecharts/apps/issues/1932))



<a name="prometheus-1.1.66"></a>
### [prometheus-1.1.66](https://github.com/truecharts/apps/compare/prometheus-1.1.65...prometheus-1.1.66) (2022-02-21)

#### Chore

* update helm general non-major helm releases ([#1927](https://github.com/truecharts/apps/issues/1927))



<a name="prometheus-1.1.65"></a>
### [prometheus-1.1.65](https://github.com/truecharts/apps/compare/prometheus-1.1.64...prometheus-1.1.65) (2022-02-21)

#### Chore

* update docker general non-major ([#1924](https://github.com/truecharts/apps/issues/1924))



<a name="prometheus-1.1.64"></a>
### [prometheus-1.1.64](https://github.com/truecharts/apps/compare/prometheus-1.1.63...prometheus-1.1.64) (2022-02-15)

#### Chore

* update helm general non-major helm releases ([#1901](https://github.com/truecharts/apps/issues/1901))



<a name="prometheus-1.1.63"></a>
### [prometheus-1.1.63](https://github.com/truecharts/apps/compare/prometheus-1.1.62...prometheus-1.1.63) (2022-02-14)

#### Chore

* update docker general non-major ([#1895](https://github.com/truecharts/apps/issues/1895))



<a name="prometheus-1.1.62"></a>
### [prometheus-1.1.62](https://github.com/truecharts/apps/compare/uptimerobot-prometheus-2.0.20...prometheus-1.1.62) (2022-02-10)

#### Chore

* update docker general non-major ([#1876](https://github.com/truecharts/apps/issues/1876))



<a name="prometheus-1.1.61"></a>
### [prometheus-1.1.61](https://github.com/truecharts/apps/compare/prometheus-1.1.60...prometheus-1.1.61) (2022-02-08)

#### Chore

* update helm general non-major helm releases ([#1871](https://github.com/truecharts/apps/issues/1871))



<a name="prometheus-1.1.60"></a>
### [prometheus-1.1.60](https://github.com/truecharts/apps/compare/prometheus-1.1.59...prometheus-1.1.60) (2022-02-08)

#### Chore

* update docker general non-major ([#1869](https://github.com/truecharts/apps/issues/1869))



<a name="prometheus-1.1.59"></a>
### [prometheus-1.1.59](https://github.com/truecharts/apps/compare/uptimerobot-prometheus-2.0.19...prometheus-1.1.59) (2022-02-07)
